Fixed question number vertical alignment

--- a/app/assets/stylesheets/pdf_report.css
+++ b/app/assets/stylesheets/pdf_report.css
@@ -31,7 +31,7 @@
     padding-bottom: 32px;
 }
 
-.td-align {
+.question-row-alignment {
     vertical-align: top;
 }
 
